--- a/print.html
+++ b/print.html
@@ -3,149 +3,154 @@
 <head>
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
-<title>A6 Voter Slip</title>
-
+<title>PDF + Image Merge Tool</title>
 <style>
-body { font-family: Arial; background:#e7e7e7; margin:0; padding:0; }
-.container { width: 360px; margin:20px auto; background:white; padding:15px; 
-    border-radius:10px; box-shadow:0 0 5px #aaa; }
-
-#previewImg { width:120px; height:150px; object-fit:cover; border:1px solid #333; 
-    display:block; margin:10px auto; }
-
-input, select { width:100%; padding:8px; margin-top:6px; border-radius:5px; 
-    border:1px solid #999; }
-button { width:100%; padding:10px; margin-top:10px; border:none; background:#0066ff; 
-    color:white; border-radius:5px; cursor:pointer; }
-button:hover { background:#004ecc; }
-
-#slipArea { width: 100%; padding:10px; margin-top:20px; border:2px solid #000; 
-    border-radius:8px; background:white; }
-.row { margin-bottom:6px; font-size:15px; }
-strong { width:140px; display:inline-block; }
-.title { text-align:center; font-size:18px; font-weight:bold; margin-bottom:10px; }
+body {font-family: Arial,sans-serif; display:flex; flex-direction:column; align-items:center; padding:10px;}
+h2 {margin-bottom:20px;}
+input, button {margin:5px; padding:8px; font-size:14px;}
+#preview {border:1px solid #ccc; padding:10px; margin-top:20px; display:flex; flex-direction:column; align-items:center;}
+#preview img {margin-top:5px; object-fit:contain;}
+.btn3d {padding:8px 15px; font-size:12px; border-radius:8px; color:#fff; cursor:pointer; border:none; background:linear-gradient(145deg,#3498db,#2980b9); box-shadow:0 3px 0 #1c5980,0 4px 8px rgba(0,0,0,0.4);}
+.btn3d:active {transform:translateY(3px); box-shadow:0 1px 0 #1c5980,0 2px 4px rgba(0,0,0,0.4);}
+#imagesList {display:flex; flex-wrap:wrap; gap:10px; margin-top:10px;}
+.img-box {position:relative;}
+.delete-btn {position:absolute; top:0; right:0; background:red; color:white; border:none; border-radius:50%; width:18px; height:18px; cursor:pointer;}
 </style>
-
 </head>
 <body>
 
-<div class="container">
+<h2>PDF + Image Merge Tool</h2>
 
-<h3 style="text-align:center;">A6 Voter Slip Generator</h3>
+<label>Select PDF File:</label>
+<input type="file" id="pdfFile" accept="application/pdf">
+<label>Select Voter Image (Save Once):</label>
+<input type="file" id="imgFile" accept="image/*">
+<div id="imagesList"></div>
 
-<input type="file" id="imgUpload" accept="image/*" onchange="saveImage(event)">
-<img id="previewImg">
+<button class="btn3d" onclick="mergePreview()">Merge & Preview</button>
+<button class="btn3d" onclick="printDoc()">Print</button>
+<button class="btn3d" onclick="downloadDoc()">Download</button>
+<button class="btn3d" onclick="sendWhatsApp()">WhatsApp Send</button>
 
-<input id="fname" placeholder="First Name">
-<input id="lname" placeholder="Last Name">
-<input id="rfname" placeholder="Relative First Name">
-<input id="rlname" placeholder="Relative Last Name">
-<input id="age" placeholder="Age">
-<select id="gender">
-    <option value="">Gender</option>
-    <option>Male</option>
-    <option>Female</option>
-</select>
-<input id="epic" placeholder="EPIC Number">
-<input id="state" placeholder="State">
-<input id="parliament" placeholder="Parliamentary Constituency">
-<input id="assembly" placeholder="Assembly Constituency">
-<input id="polling" placeholder="Polling Station">
-<input id="partno" placeholder="Part Number">
-<input id="serial" placeholder="Serial Number">
-<input id="date" placeholder="Polling Date">
+<h3>Preview:</h3>
+<div id="preview"></div>
 
-<button onclick="generateSlip()">Generate Slip</button>
-<button onclick="downloadPDF()">Download A6 PDF</button>
-
-<div id="slipArea"></div>
-
-</div>
-
-<script src="https://cdnjs.cloudflare.com/ajax/libs/html2canvas/1.4.1/html2canvas.min.js"></script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/pdf.js/2.16.105/pdf.min.js"></script>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/jspdf/2.5.1/jspdf.umd.min.js"></script>
 
 <script>
+const { jsPDF } = window.jspdf;
+let pdfImages = [];
+let voterImg = null;
 
-// Load saved image + data
-window.onload = function () {
-    let img = localStorage.getItem("voterImg");
-    if (img) document.getElementById("previewImg").src = img;
+// Load saved voter image
+const savedImg = localStorage.getItem('voterImage');
+if(savedImg){ voterImg = savedImg; displayVoterImage(voterImg); }
 
-    let fields = ["fname","lname","rfname","rlname","age","gender","epic","state",
-                  "parliament","assembly","polling","partno","serial","date"];
+document.getElementById('pdfFile').addEventListener('change', async function(){
+    const file = this.files[0];
+    if(!file) return;
+    const arrayBuffer = await file.arrayBuffer();
+    const pdf = await pdfjsLib.getDocument({data: arrayBuffer}).promise;
+    pdfImages = [];
+    for(let i=1;i<=pdf.numPages;i++){
+        const page = await pdf.getPage(i);
+        const viewport = page.getViewport({scale:2});
+        const canvas = document.createElement('canvas');
+        canvas.width = viewport.width;
+        canvas.height = viewport.height;
+        const ctx = canvas.getContext('2d');
+        await page.render({canvasContext: ctx, viewport: viewport}).promise;
+        pdfImages.push(canvas.toDataURL('image/jpeg'));
+    }
+    alert("PDF processed successfully!");
+});
 
-    fields.forEach(id=>{
-        if(localStorage.getItem(id)) document.getElementById(id).value = localStorage.getItem(id);
-    });
-};
-
-// Save Image
-function saveImage(event) {
-    const file = event.target.files[0];
+document.getElementById('imgFile').addEventListener('change', function(){
+    const file = this.files[0];
+    if(!file) return;
     const reader = new FileReader();
-    reader.onload = function(){
-        localStorage.setItem("voterImg", reader.result);
-        document.getElementById("previewImg").src = reader.result;
-    }
+    reader.onload = function(e){
+        voterImg = e.target.result;
+        localStorage.setItem('voterImage', voterImg);
+        displayVoterImage(voterImg);
+    };
     reader.readAsDataURL(file);
+});
+
+function displayVoterImage(src){
+    const div = document.getElementById('imagesList');
+    div.innerHTML='';
+    const box = document.createElement('div');
+    box.className='img-box';
+    const img=document.createElement('img');
+    img.src=src; img.style.width='100px'; img.style.height='100px';
+    const del = document.createElement('button');
+    del.innerText='X'; del.className='delete-btn';
+    del.onclick=()=>{ localStorage.removeItem('voterImage'); voterImg=null; div.innerHTML=''; };
+    box.appendChild(img); box.appendChild(del); div.appendChild(box);
 }
 
-// Save Text Data
-function autoStore() {
-    let fields = ["fname","lname","rfname","rlname","age","gender","epic","state",
-                  "parliament","assembly","polling","partno","serial","date"];
-
-    fields.forEach(id=>{
-        localStorage.setItem(id, document.getElementById(id).value);
+// Preview merged
+function mergePreview(){
+    if(pdfImages.length===0){ alert("Upload PDF first"); return; }
+    const preview = document.getElementById('preview');
+    preview.innerHTML='';
+    pdfImages.forEach(src=>{
+        const img = new Image();
+        img.src=src;
+        img.style.width='120px';
+        img.style.height='auto';
+        preview.appendChild(img);
     });
-}
-document.querySelectorAll("input,select").forEach(e=>e.addEventListener("input",autoStore));
-
-// Generate Slip
-function generateSlip() {
-
-    let pimg = document.getElementById("previewImg").src;
-
-    let html = `
-        <div class="title">VOTER INFORMATION SLIP</div>
-        <img src="${pimg}" style="width:120px;height:150px;object-fit:cover;border:1px solid #000;margin:auto;display:block;">
-        <div class="row"><strong>Name:</strong> ${fname.value} ${lname.value}</div>
-        <div class="row"><strong>Relative Name:</strong> ${rfname.value} ${rlname.value}</div>
-        <div class="row"><strong>Age:</strong> ${age.value}</div>
-        <div class="row"><strong>Gender:</strong> ${gender.value}</div>
-        <div class="row"><strong>EPIC No:</strong> ${epic.value}</div>
-        <div class="row"><strong>State:</strong> ${state.value}</div>
-        <div class="row"><strong>Parliamentary:</strong> ${parliament.value}</div>
-        <div class="row"><strong>Assembly:</strong> ${assembly.value}</div>
-        <div class="row"><strong>Polling Station:</strong> ${polling.value}</div>
-        <div class="row"><strong>Part No:</strong> ${partno.value}</div>
-        <div class="row"><strong>Serial No:</strong> ${serial.value}</div>
-        <div class="row"><strong>Polling Date:</strong> ${date.value}</div>
-    `;
-
-    document.getElementById("slipArea").innerHTML = html;
-}
-
-// Download A6 PDF
-async function downloadPDF() {
-
-    if (!slipArea.innerHTML.trim()) {
-        alert("First click on Generate Slip.");
-        return;
+    if(voterImg){
+        const img = new Image();
+        img.src=voterImg;
+        img.style.width='40px';
+        img.style.height='40px';
+        preview.appendChild(img);
     }
-
-    const { jsPDF } = window.jspdf;
-
-    const canvas = await html2canvas(document.getElementById("slipArea"), { scale:3 });
-    const img = canvas.toDataURL("image/jpeg",1.0);
-
-    let pdf = new jsPDF("p", "mm", [105, 148]);
-    pdf.addImage(img, "JPEG", 3, 3, 99, 142);
-    pdf.save("VoterSlip-A6.pdf");
 }
 
-</script>
+// Generate single page jsPDF
+async function generateDoc(){
+    if(pdfImages.length===0){ alert("Upload PDF first"); return null; }
+    const doc = new jsPDF({unit:'mm', format:[50,200]}); // 2 inch width
+    let y=5;
+    for(const src of pdfImages){
+        const img = new Image();
+        img.src=src;
+        await new Promise(r=>img.onload=r);
+        const imgProps = doc.getImageProperties(img);
+        const pdfWidth = 45; // fit mini printer
+        const pdfHeight = (imgProps.height*pdfWidth)/imgProps.width;
+        doc.addImage(img,'JPEG',5,y,pdfWidth,pdfHeight);
+        y+=pdfHeight+2;
+    }
+    if(voterImg){
+        const img = new Image();
+        img.src=voterImg;
+        await new Promise(r=>img.onload=r);
+        doc.addImage(voterImg,'JPEG',5,y,40,40);
+    }
+    return doc;
+}
 
+async function printDoc(){
+    const doc = await generateDoc();
+    if(doc){ doc.autoPrint(); window.open(doc.output('bloburl'),'_blank'); }
+}
+async function downloadDoc(){
+    const doc = await generateDoc();
+    if(doc) doc.save('Voter_Merged.pdf');
+}
+async function sendWhatsApp(){
+    const doc = await generateDoc();
+    const blob = doc.output('blob');
+    const file = new File([blob],'Voter.pdf',{type:'application/pdf'});
+    const url = URL.createObjectURL(file);
+    window.open(`https://wa.me/?text=Voter PDF: ${url}`,'_blank');
+}
+</script>
 </body>
 </html>
