--- a/print.html
+++ b/print.html
@@ -3,155 +3,130 @@
 <head>
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
-<title>PDF + Image Merge Tool</title>
+<title>Voter Slip Extract & PDF</title>
 <style>
 body {font-family: Arial,sans-serif; display:flex; flex-direction:column; align-items:center; padding:10px;}
-h2 {margin-bottom:20px;}
 input, button {margin:5px; padding:8px; font-size:14px;}
-#preview {border:1px solid #ccc; padding:10px; margin-top:20px; display:flex; flex-direction:column; align-items:center;}
-#preview img {margin-top:5px; object-fit:contain;}
+#preview {border:1px solid #ccc; padding:10px; margin-top:20px; width:320px;}
+.slip-row {margin-bottom:5px; font-size:14px;}
+.slip-label {font-weight:bold; display:inline-block; width:120px;}
+#voterImg {width:80px; height:80px; object-fit:cover; margin-top:10px;}
 .btn3d {padding:8px 15px; font-size:12px; border-radius:8px; color:#fff; cursor:pointer; border:none; background:linear-gradient(145deg,#3498db,#2980b9); box-shadow:0 3px 0 #1c5980,0 4px 8px rgba(0,0,0,0.4);}
 .btn3d:active {transform:translateY(3px); box-shadow:0 1px 0 #1c5980,0 2px 4px rgba(0,0,0,0.4);}
-#imagesList {display:flex; flex-wrap:wrap; gap:10px; margin-top:10px;}
-.img-box {position:relative;}
-.delete-btn {position:absolute; top:0; right:0; background:red; color:white; border:none; border-radius:50%; width:18px; height:18px; cursor:pointer;}
-.slip-row {margin-bottom:5px; font-size:14px;}
-.slip-label {font-weight:bold; display:inline-block; width:130px;}
 </style>
 </head>
 <body>
 
-<h2>PDF + Image Merge Tool</h2>
+<h2>Voter Slip Extract</h2>
 
 <label>Select PDF File:</label>
-<input type="file" id="pdfFile" accept="application/pdf">
-<label>Select Voter Image (Save Once):</label>
-<input type="file" id="imgFile" accept="image/*">
-<div id="imagesList"></div>
+<input type="file" id="pdfFile" accept="application/pdf"><br>
+<label>Select Voter Image:</label>
+<input type="file" id="imgFile" accept="image/*"><br>
 
-<button class="btn3d" onclick="mergePreview()">Merge & Preview</button>
-<button class="btn3d" onclick="printDoc()">Print</button>
-<button class="btn3d" onclick="downloadDoc()">Download</button>
-<button class="btn3d" onclick="sendWhatsApp()">WhatsApp Send</button>
+<button class="btn3d" onclick="mergePreview()">Preview</button>
+<button class="btn3d" onclick="downloadPDF()">Download PDF</button>
 
-<h3>Preview:</h3>
 <div id="preview"></div>
 
 <script src="https://cdnjs.cloudflare.com/ajax/libs/pdf.js/2.16.105/pdf.min.js"></script>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/jspdf/2.5.1/jspdf.umd.min.js"></script>
 
 <script>
-const { jsPDF } = window.jspdf;
-let pdfData = {}; // extracted text fields
 let voterImg = null;
+let extracted = {};
 
-// Load saved voter image
-const savedImg = localStorage.getItem('voterImage');
-if(savedImg){ voterImg = savedImg; displayVoterImage(voterImg); }
+// Load voter image and save in localStorage
+document.getElementById('imgFile').addEventListener('change', function(){
+    const reader = new FileReader();
+    reader.onload = e => {
+        voterImg = e.target.result;
+        localStorage.setItem('voterImage', voterImg);
+    };
+    reader.readAsDataURL(this.files[0]);
+});
 
-// PDF Text Extraction
+// Extract text from PDF
 document.getElementById('pdfFile').addEventListener('change', async function(){
     const file = this.files[0];
     if(!file) return;
+
     const arrayBuffer = await file.arrayBuffer();
     const pdf = await pdfjsLib.getDocument({data: arrayBuffer}).promise;
 
     let fullText = '';
-    for(let i=1;i<=pdf.numPages;i++){
+    for(let i=1; i<=pdf.numPages; i++){
         const page = await pdf.getPage(i);
         const content = await page.getTextContent();
-        const strings = content.items.map(item=>item.str);
-        fullText += strings.join(' ') + '\n';
+        const strings = content.items.map(item => item.str);
+        fullText += strings.join('\n') + '\n';
     }
 
-    // Extract required fields using RegEx
-    pdfData.firstName = (fullText.match(/First Name\s*([A-Za-z\s]+)/i)||['',''])[1].trim();
-    pdfData.lastName  = (fullText.match(/Last Name\s*([A-Za-z\s]+)/i)||['',''])[1].trim();
-    pdfData.epic      = (fullText.match(/EPIC No\s*([A-Z0-9]+)/i)||['',''])[1].trim();
-    pdfData.polling   = (fullText.match(/Polling Station\s*([A-Za-z0-9\s,]+)/i)||['',''])[1].trim();
-    pdfData.partNo    = (fullText.match(/Part Number Part Name\s*([A-Za-z0-9\s\-]+)/i)||['',''])[1].trim();
-    pdfData.serial    = (fullText.match(/Part Serial Number\s*([0-9]+)/i)||['',''])[1].trim();
+    // Normalize text for easier matching
+    const lines = fullText.split(/\r?\n/).map(l => l.trim()).filter(l => l);
 
-    alert("PDF text extracted successfully!");
+    function getValue(keywords){
+        for(const kw of keywords){
+            const index = lines.findIndex(line => line.includes(kw));
+            if(index >= 0 && index+1 < lines.length){
+                return lines[index+1].trim();
+            }
+        }
+        return '';
+    }
+
+    // Extract required fields
+    extracted.firstName = getValue(["पहिले नाव / First Name"]);
+    extracted.lastName = getValue(["आडनाव / Last Name"]);
+    extracted.epic = getValue(["EPIC क्रमांक / EPIC No"]);
+    extracted.polling = getValue(["मतदान केंद्र / Polling Station"]);
+    extracted.partNo = getValue(["भाग क्रमांक-भागाचे नाव / Part Number Part Name"]);
+    extracted.serial = getValue(["भाग अनुक्रम क्रमांक / Part Serial Number"]);
+
+    alert('PDF text extracted successfully!');
 });
 
-// Voter Image
-document.getElementById('imgFile').addEventListener('change', function(){
-    const file = this.files[0];
-    if(!file) return;
-    const reader = new FileReader();
-    reader.onload = function(e){
-        voterImg = e.target.result;
-        localStorage.setItem('voterImage', voterImg);
-        displayVoterImage(voterImg);
-    };
-    reader.readAsDataURL(file);
-});
-
-function displayVoterImage(src){
-    const div = document.getElementById('imagesList');
-    div.innerHTML='';
-    const box = document.createElement('div');
-    box.className='img-box';
-    const img=document.createElement('img');
-    img.src=src; img.style.width='100px'; img.style.height='100px';
-    const del = document.createElement('button');
-    del.innerText='X'; del.className='delete-btn';
-    del.onclick=()=>{ localStorage.removeItem('voterImage'); voterImg=null; div.innerHTML=''; };
-    box.appendChild(img); box.appendChild(del); div.appendChild(box);
-}
-
-// Preview merged slip
+// Preview extracted data + voter image
 function mergePreview(){
-    const preview = document.getElementById('preview');
-    preview.innerHTML='';
+    const div = document.getElementById('preview');
+    div.innerHTML = '';
+    if(!extracted.firstName){ alert('Upload PDF first!'); return; }
 
-    // Show extracted fields
-    for(const key of ['firstName','lastName','epic','polling','partNo','serial']){
+    for(const key in extracted){
         const row = document.createElement('div');
-        row.className='slip-row';
-        row.innerHTML = `<span class="slip-label">${key.replace(/([A-Z])/g,' $1').replace(/^./,str=>str.toUpperCase())}:</span> ${pdfData[key]||''}`;
-        preview.appendChild(row);
+        row.className = 'slip-row';
+        row.innerHTML = `<span class="slip-label">${key.replace(/([A-Z])/g,' $1').trim()}:</span> ${extracted[key]}`;
+        div.appendChild(row);
     }
 
-    // Show voter image
-    if(voterImg){
-        const img = new Image();
-        img.src=voterImg;
-        img.style.width='80px';
-        img.style.height='80px';
-        img.style.marginTop='10px';
-        preview.appendChild(img);
+    const savedImg = localStorage.getItem('voterImage');
+    if(savedImg){
+        const img = document.createElement('img');
+        img.src = savedImg;
+        img.id = 'voterImg';
+        div.appendChild(img);
     }
 }
 
-// Generate PDF from preview
-async function generateDoc(){
-    const preview = document.getElementById('preview');
-    if(!preview.innerHTML){ alert("Preview first!"); return null; }
-    const canvas = await html2canvas(preview);
-    const imgData = canvas.toDataURL("image/png");
-    const doc = new jsPDF({orientation:'portrait',unit:'mm',format:[105,148]}); // A6
-    doc.addImage(imgData,'PNG',5,5,95,138);
-    return doc;
-}
+// Download A6 PDF
+async function downloadPDF(){
+    if(!extracted.firstName){ alert('Upload PDF first!'); return; }
+    const { jsPDF } = window.jspdf;
+    const doc = new jsPDF({unit:'mm', format:'a6'});
+    let y=10;
 
-async function printDoc(){
-    const doc = await generateDoc();
-    if(doc){ doc.autoPrint(); window.open(doc.output('bloburl'),'_blank'); }
-}
-async function downloadDoc(){
-    const doc = await generateDoc();
-    if(doc) doc.save('Voter_Merged_A6.pdf');
-}
-async function sendWhatsApp(){
-    const doc = await generateDoc();
-    const blob = doc.output('blob');
-    const file = new File([blob],'Voter.pdf',{type:'application/pdf'});
-    const url = URL.createObjectURL(file);
-    window.open(`https://wa.me/?text=Voter PDF: ${url}`,'_blank');
+    for(const key in extracted){
+        doc.text(`${key.replace(/([A-Z])/g,' $1').trim()}: ${extracted[key]}`, 10, y);
+        y += 10;
+    }
+
+    const savedImg = localStorage.getItem('voterImage');
+    if(savedImg){
+        doc.addImage(savedImg, 'JPEG', 10, y, 40, 40);
+    }
+
+    doc.save('voter-slip.pdf');
 }
 </script>
-<script src="https://html2canvas.hertzen.com/dist/html2canvas.min.js"></script>
 </body>
 </html>
