--- a/print.html
+++ b/print.html
@@ -7,7 +7,7 @@
 <style>
 body {font-family: Arial,sans-serif; display:flex; flex-direction:column; align-items:center; padding:10px;}
 input, button {margin:5px; padding:8px; font-size:14px;}
-#preview {border:1px solid #ccc; padding:10px; margin-top:20px; width:320px;}
+#preview {border:1px solid #ccc; padding:10px; margin-top:20px; width:350px;}
 .slip-row {margin-bottom:5px; font-size:14px;}
 .slip-label {font-weight:bold; display:inline-block; width:120px;}
 #voterImg {width:80px; height:80px; object-fit:cover; margin-top:10px;}
@@ -59,23 +59,16 @@ document.getElementById('pdfFile').addEventListener('change', async function(){
         const page = await pdf.getPage(i);
         const content = await page.getTextContent();
         const strings = content.items.map(item => item.str);
-        fullText += strings.join(' ') + ' ';
+        fullText += strings.join('\n') + '\n';
     }
 
-    // Extract only required fields using regex
-    function getField(regex){
-        const match = fullText.match(regex);
-        return match ? match[1].trim() : '';
-    }
-
-    extracted = {
-        firstName: getField(/First Name\s*[:\-]?\s*([A-Za-z\s]+)/i),
-        lastName: getField(/Last Name\s*[:\-]?\s*([A-Za-z\s]+)/i),
-        epic: getField(/Epic no\.?\s*[:\-]?\s*(\S+)/i),
-        serial: getField(/Serial No\.?\s*[:\-]?\s*(\S+)/i),
-        partNo: getField(/Part No\.?\s*[:\-]?\s*(\S+)/i),
-        polling: getField(/Polling Station Address\s*[:\-]?\s*(.+)/i)
-    };
+    // Extract only required fields with strict regex
+    extracted.firstName = fullText.match(/Name\s*:\s*([A-Za-z\s]+)/i)?.[1]?.trim() || '';
+    extracted.lastName = fullText.match(/Name\s*:\s*([A-Za-z\s]+)$/m)?.[1]?.trim() || '';
+    extracted.epic = fullText.match(/Epic no\.?\s*[:\-]\s*(\S+)/i)?.[1]?.trim() || '';
+    extracted.serial = fullText.match(/Serial No\.?\s*[:\-]\s*(\S+)/i)?.[1]?.trim() || '';
+    extracted.partNo = fullText.match(/Part No\.?\s*[:\-]\s*([\d\-]+)/i)?.[1]?.trim() || '';
+    extracted.polling = (fullText.match(/Polling Station Address\s*[:\-]\s*(.+)/i)?.[1] || '').split('Scan')[0].trim();
 
     alert('PDF text extracted successfully!');
 });
@@ -102,12 +95,12 @@ function mergePreview(){
     }
 }
 
-// Download A6 PDF with extracted info + voter image
+// Download A6 PDF
 async function downloadPDF(){
     if(!extracted.epic){ alert('Upload PDF first!'); return; }
     const { jsPDF } = window.jspdf;
     const doc = new jsPDF({unit:'mm', format:'a6'});
-    let y = 10;
+    let y=10;
 
     for(const key in extracted){
         doc.text(`${key.replace(/([A-Z])/g,' $1').trim()}: ${extracted[key]}`, 10, y);
